--- a/css/styles.css
+++ b/css/styles.css
@@ -23,30 +23,31 @@ color: var(--primary-text-color);
 /* site nav */
 
 /* logo */
-.logo_web {
+.logo-web {
     color: var(--accent-color);
 }
 
-.logo_studio {
+.logo-studio {
     color: #000000;
 }
 
-.full_logo :focus{
+.full-logo :focus{
     color: var(--accent-color);
 }
 
-.site_nav .link {
+.site-nav .link {
     color: var(--title-text-color);
 }
-.site_nav .link:hover,
-.site_nav .link:focus {
+
+.site-nav .link:hover,
+.site-nav .link:focus {
    color: var(--accent-color) ;
 }
-.auth_nav {
+.auth-nav {
     color: var(--primary-text-color);
 }
-.auth_nav .link:hover,
-.auth_nav .link:focus {
+.auth-nav .link:hover,
+.auth-nav .link:focus {
     color: var(--accent-color);
 }
 
@@ -62,18 +63,18 @@ color: #2196F3
 .valvue_color_text_button{
     color: #fff;
 } */
-.hero_title{
+.hero-title{
     color: #fff;
 }
 
-.subscribing_text{
+.subscribing-text{
     color: var(--primary-text-color)
 }
-.section_title{
+.section-title{
     color: var(--title-text-color)
 }
 
-.our_team {
+.our-team {
     background-color:#F5F4FA ;
 }
 
