--- a/css/styles.css
+++ b/css/styles.css
@@ -11,44 +11,87 @@
     --primary-text-color:#757575;
     --title-text-color:#212121;
     --accent-color:#2196F3;
+    --passive-color-button:#F5F4FA;
 }
+
 body {
-background-color: #fff;
-color: var(--primary-text-color);
-}
- 
+
+    color: var(--primary-text-color);
+    background-color: #ffffff;
+    font-family: roboto, sans-serif;
+    letter-spacing: 0.03em;
+} 
+
 .list {
     list-style: none;
 }
+a {
+    text-decoration: none;
+}
+
 /* site nav */
 
 /* logo */
 .logo-web {
     color: var(--accent-color);
+    cursor: default;
 }
 
 .logo-studio {
     color: #000000;
+    cursor: default;
 }
 
 .full-logo :focus{
     color: var(--accent-color);
+    text-decoration: none;
+    cursor: default;
+    
+
 }
+
+.full-logo {
+    font-family: Raleway, sans-serif;
+    
+        font-size: 26px;
+        line-height: 1.19;
+        letter-spacing: 0.03em;
+}
+
+.full-logo {
+    cursor: default; 
+}
+
 
 .site-nav .link {
     color: var(--title-text-color);
+    cursor: default;
+   
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
    color: var(--accent-color) ;
+    cursor: default;
 }
-.auth-nav {
+.auth-nav a{
     color: var(--primary-text-color);
+    text-decoration: none;
+    cursor: default;
+
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
 }
 .auth-nav .link:hover,
 .auth-nav .link:focus {
     color: var(--accent-color);
+    cursor: default;
 }
 
 /* main */
@@ -56,30 +99,161 @@ color: var(--primary-text-color);
 .hero{
     background-color: #2F303A;
 }
-/* .button :hover,
-.button :focus{
-color: #2196F3
-}
-.valvue_color_text_button{
-    color: #fff;
-} */
+
 .hero-title{
     color: #fff;
+
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        text-align: center;
+        letter-spacing: 0.06em;
 }
+.hero-button{
+    color:#fff;
+    background-color:#2196F3 ;
+    cursor: pointer;
+    font-family: inherit;
+
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+    
+    }
 
 .subscribing-text{
     color: var(--primary-text-color)
+
 }
 .section-title{
     color: var(--title-text-color)
+
+        
 }
+
+.section-title h3 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+
+
 
 .our-team {
     background-color:#F5F4FA ;
+  
+}
+
+.team-title {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.18;
+        letter-spacing: 0.03em;
+        color: #212121;
+}
+.section-subscribe {
+
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.18;
+        letter-spacing: 0.03em;
 }
 
 /* footer */
-.footer{
-    background-color: #2F303A;
+
+.footer-nav .link {
+    text-decoration: none;
+}
+.footer-nav .link {
+    color: var(--primary-text-color);
+    cursor: default;
 }
 
+.footer-nav .link:hover,
+.footer-nav .link:focus {
+    color: var(--accent-color);
+    cursor: default;
+}
+
+
+.footer-nav .footer-adress {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        color: #FFFFFF;
+}
+
+.footer-link{
+    text-decoration: none;
+}
+
+.footer-link {
+    color: var(--primary-text-color);
+    cursor: default;
+}
+
+.footer-link .link:hover,
+.footer-link .link:focus {
+    color: var(--accent-color);
+    cursor: default;
+}
+
+.footer-nav .footer-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+.footer{
+    background-color: #2F303A;
+
+}
+
+
+.logo-studio-footer{
+    color: #fff;
+}
+
+/* portfolio_page_css  */
+
+.filter-buttons button{
+    cursor: pointer;
+}
+.filter-buttons button,
+
+.filter-buttons button :focus{
+    background-color: #F5F4FA;
+}
+.filter-buttons :hover{
+    color: var(--accent-color)
+}
+.filter-buttons button:hover{
+    color: #fff;
+    background-color: #2196F3;
+}
+.our-projects h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.our-projects p{
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.03em;
+}
