--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a {
 
 .full-logo {
     font-family: Raleway, sans-serif;
-    
+       
         font-size: 26px;
         line-height: 1.19;
         letter-spacing: 0.03em;
@@ -65,8 +65,7 @@ a {
 
 .site-nav .link {
     color: var(--title-text-color);
-    cursor: default;
-   
+
         font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
@@ -108,6 +107,7 @@ a {
         line-height: 1.36;
         text-align: center;
         letter-spacing: 0.06em;
+        text-transform: uppercase;
 }
 .hero-button{
     color:#fff;
@@ -131,7 +131,20 @@ a {
 
         
 }
+.section h3 {
+    font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+}
 
+.section p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+
+}
 .section-title h3 {
     font-weight: 700;
     font-size: 14px;
@@ -165,13 +178,16 @@ h2 {
 }
 .section-subscribe {
 
-        font-weight: 400;
-        font-size: 16px;
+      
         line-height: 1.18;
         letter-spacing: 0.03em;
 }
 
 /* footer */
+
+.address {
+    font-style: normal;
+}
 
 .footer-nav .link {
     text-decoration: none;
@@ -229,6 +245,13 @@ h2 {
 
 /* portfolio_page_css  */
 
+.filter-buttons button {
+        font-family: inherit;
+        font-size: 16px;
+        line-height: 1.6;
+        letter-spacing: 0.03em;
+}
+
 .filter-buttons button{
     cursor: pointer;
 }
@@ -252,8 +275,7 @@ h2 {
 }
 
 .our-projects p{
-        font-weight: 400;
-        font-size: 16px;
+       
         line-height: 1.87;
         letter-spacing: 0.03em;
 }
